--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,24 +1,265 @@
 <?xml version="1.0" encoding="utf-8"?>  
+
+<lib.SlidingMenu 
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/id_menu"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:zhy="http://schemas.android.com/apk/res/com.smarttiger.gpsimformation"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="@drawable/img_frame_background"
+    android:scrollbars="none"
+    zhy:rightPadding="90dp" >
+    
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="fill_parent"
+        android:orientation="horizontal" >
+
+        <include 
+            android:id="@+id/menuLayout"
+            layout="@layout/layout_menu" />
+        
+        
+        
+    
 <LinearLayout  
-  xmlns:android="http://schemas.android.com/apk/res/android"  
   android:layout_width="fill_parent"  
   android:layout_height="fill_parent"
-  android:orientation="vertical">  
-    <TextView 
-        android:id="@+id/tv" 
-        android:text="TextView" 
-        android:layout_width="wrap_content" 
-        android:layout_height="wrap_content"></TextView>  
-    <EditText
-        android:id="@+id/editText"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:numeric="decimal"
-        />
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="保存妈妈手机号"/>
+  android:orientation="vertical"
+  android:background="@drawable/main_background1">  
+  
+    <RelativeLayout
+        android:id="@+id/relativeLayout1"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@drawable/topbackground1"
+        android:gravity="center_vertical" >
+
+        <Button
+            android:id="@+id/backBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:background="@drawable/topbtn1"
+            android:layout_marginLeft="10dp"
+            android:onClick="toggleMenu"
+            android:text="菜单"
+            android:textColor="#FFFFFF"
+            android:textSize="18dp" >
+        </Button>
+
+        <TextView
+            android:id="@+id/titleText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="定位"
+            android:textColor="#FFFFFF"
+            android:textSize="20dp" >
+        </TextView>
+
+        <Button
+            android:id="@+id/topBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="10dp"
+            android:background="@drawable/topbtn1"
+            android:padding="7dp"
+            android:text="我是孩子"
+            android:textColor="#FFFFFF"
+            android:textSize="18dp" >
+        </Button>
+    </RelativeLayout>
+    
+    <LinearLayout 
+        android:id="@+id/childLayout" 
+        android:layout_width="fill_parent"  
+  		android:layout_height="wrap_content"
+  		android:layout_weight="1"
+  		android:orientation="vertical"
+  		android:layout_margin="4dp"
+  		android:gravity="center_horizontal">
+    
+	    <TextView 
+	        android:text="我的位置信息：" 
+	        android:layout_width="wrap_content" 
+	        android:layout_height="wrap_content"
+		    android:textSize="18dp"
+		    android:textColor="#000000"/>  
+	    
+	    <TextView 
+	        android:id="@+id/tv" 
+	        android:text="无信息" 
+	        android:layout_width="wrap_content" 
+	        android:layout_height="wrap_content"
+		    android:textSize="16dp"
+	        android:textColor="@android:color/black"/>  
+	        
+	    <Button 
+	        android:layout_width="wrap_content" 
+	        android:layout_height="wrap_content"
+            android:background="@drawable/topbtn1"
+            android:padding="6dp"
+		    android:text="地图显示" 
+		    android:textSize="16dp"
+            android:textColor="#FFFFFF"
+            android:onClick="showOnMap"
+	        />
+
+	    <TextView
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_marginTop="5dp"
+	        android:background="@drawable/topbackground1"
+	        android:padding="5dp"
+	        android:gravity="center"
+	        android:text="自动返回位置信息给对方的触发条件："
+	        android:textColor="#FFFFFF"
+	        android:textSize="18dp" />
+	    
+	    <RadioGroup 
+	        android:id="@+id/conditionRadio"
+	        android:layout_width="wrap_content" 
+	        android:layout_height="wrap_content"
+	        >
+	        <RadioButton 
+	            android:id="@+id/missedcallRB"
+	        	android:layout_width="wrap_content" 
+	        	android:layout_height="wrap_content"
+	        	android:text="我未接电话时触发"
+	        	android:textColor="@android:color/black"
+	            />
+	        <RadioButton 
+	            android:id="@+id/callRB"
+	        	android:layout_width="wrap_content" 
+	        	android:layout_height="wrap_content"
+	        	android:text="我已接未接都触发"
+	        	android:textColor="@android:color/black"
+	            />
+	        
+	        
+	    </RadioGroup> 
+	    
+	</LinearLayout>
+	
+    
+    <LinearLayout 
+        android:id="@+id/parentLayout" 
+        android:layout_width="fill_parent"  
+  		android:layout_height="fill_parent"
+  		android:layout_weight="1"
+  		android:orientation="vertical"
+  		android:layout_margin="4dp"
+  		android:gravity="center_horizontal">
+	    
+        <TextView 
+            android:id="@+id/childMessage"
+	        android:text="宝贝位置信息：" 
+	        android:layout_width="wrap_content" 
+	        android:layout_height="wrap_content"
+	        android:gravity="center"
+		    android:textSize="18dp"
+	        android:textColor="@android:color/black"/> 
+	        
+	        
+        <ListView 
+            android:id="@+id/locationList"
+			android:layout_width="fill_parent"
+			android:layout_height="fill_parent"
+			android:layout_weight="1"
+			android:cacheColorHint="#0000"
+			android:divider="@null"
+			android:stackFromBottom="false" />
+	        
         
+        <LinearLayout 
+	        android:layout_width="fill_parent"  
+	  		android:layout_height="wrap_content"
+	  		android:orientation="horizontal"
+	  		android:gravity="center">
+	        
+		    <Button 
+		        android:id="@+id/getChildLocation"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:background="@drawable/topbtn1"
+		        android:text="主动获取宝贝位置"
+		        android:textColor="#FFFFFF"
+		        android:textSize="15sp"
+		        android:onClick="getChildLocation"
+		        />
+		    
+		    <TextView 
+		        android:text="（会发送一条特定短信）" 
+		        android:layout_width="wrap_content" 
+		        android:layout_height="wrap_content"
+		        android:gravity="center"
+			    android:textSize="15sp"
+		        android:textColor="@android:color/black"/>  
+	    </LinearLayout>
+	    
+	    
+	</LinearLayout>
+        
+    <LinearLayout 
+        android:layout_width="fill_parent"  
+  		android:layout_height="wrap_content"
+  		android:orientation="horizontal"
+  		android:layout_marginLeft="4dp"
+  		android:layout_marginRight="4dp"
+  		android:layout_marginBottom="4dp"
+  		android:gravity="center_vertical"
+  		android:focusable="true"  
+   		android:focusableInTouchMode="true">
+       
+        <TextView 
+	        android:id="@+id/phoneNumText" 
+	        android:text="家长手机号：" 
+	        android:layout_width="wrap_content" 
+	        android:layout_height="wrap_content" 	        
+	        android:textSize="18sp"
+	        android:textColor="@android:color/black"
+	        />
+        
+        <EditText
+	        android:id="@+id/editText"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_weight="1"
+	        android:digits="0123456789,"
+	        android:maxLines="2"
+	        android:layout_marginLeft="1dp"
+	        android:layout_marginRight="4dp"
+	        />
+	    <Button
+	        android:id="@+id/button"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:background="@drawable/topbtn1"
+	        android:text="保存"
+	        android:textColor="#FFFFFF"
+	        android:textSize="18sp"
+			/>
+        
+    </LinearLayout>
+    
+    <LinearLayout
+        android:id="@+id/miniAdLinearLayout" 
+		android:layout_width="fill_parent" 
+		android:layout_height="wrap_content" 
+		android:gravity="center_horizontal"
+  		android:orientation="horizontal"
+  		android:visibility="gone" >
+    </LinearLayout>
+    
 </LinearLayout>  
+
+
+
+
+    </LinearLayout>
+</lib.SlidingMenu>
